--- a/class-06-multiapps-template-render-include/assignment05/readme
+++ b/class-06-multiapps-template-render-include/assignment05/readme
@@ -1,2 +1,17 @@
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Hyperlinks</title>
+   </head>
 
-https://github.com/Shibli-Nomani/assignment05
+   <body>
+      <h1>Company</h1>
+      <p>
+         We are a <a href="https://github.com/Shibli-Nomani/assignment05">Assignment-05</a> of professionals working
+         hard to provide free learning content.
+      </p>
+   </body>
+</html>
+
+
+
